[gd_scene load_steps=10 format=3 uid="uid://br1nhf5mg6s8k"]

[ext_resource type="Script" path="res://scripts/death_screen.gd" id="1_efn1j"]
[ext_resource type="FontFile" uid="uid://e3k2p7adef8y" path="res://assets/font/Conduit ITC Bold.otf" id="1_xrvje"]
[ext_resource type="FontFile" uid="uid://gyrybf8uo0yv" path="res://assets/font/RubikDistressed-Regular.ttf" id="2_q2dpl"]
[ext_resource type="AudioStream" uid="uid://dmmvel5pm4xu0" path="res://assets/audio/music/Death_theme_Atmospheric Sci-Fi Horror Music - Interdimensional Horrors ⧸⧸ Royalty Free No Copyright Music.ogg" id="4_n6kw7"]
[ext_resource type="AudioStream" uid="uid://sfwx51yqmfl6" path="res://assets/audio/370849__cabled_mess__clack_minimal-ui-sounds.wav" id="5_b05lh"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7kxqu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4hii"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m05jb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Environment" id="Environment_i5ahg"]
background_mode = 3
glow_enabled = true
glow_intensity = 2.0
glow_bloom = 0.5

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_efn1j")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -61.0
offset_right = 2097.0
offset_bottom = 1059.0
texture = SubResource("CanvasTexture_7kxqu")

[node name="Death" type="Label" parent="."]
modulate = Color(0.996078, 0, 0, 0.443137)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -756.0
offset_top = 260.0
offset_right = 756.0
offset_bottom = 497.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_q2dpl")
theme_override_font_sizes/font_size = 200
text = "You are dead"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_right = 108.0
offset_bottom = 706.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 2

[node name="PlayAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_hover_color = Color(1, 0.0909423, 0.0594644, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_xrvje")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_r4hii")
theme_override_styles/normal = SubResource("StyleBoxFlat_m05jb")
text = "Retry
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_hover_color = Color(1, 0.0901961, 0.0588235, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_xrvje")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_r4hii")
theme_override_styles/normal = SubResource("StyleBoxFlat_m05jb")
text = "Quit
"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i5ahg")

[node name="bg" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_n6kw7")
autoplay = true

[node name="UISound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_b05lh")

[connection signal="mouse_entered" from="VBoxContainer/PlayAgain" to="." method="_on_play_again_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
